--- a/styles/chmduquesne.css
+++ b/styles/chmduquesne.css
@@ -19,7 +19,7 @@ body {
 
 /* Title of the resume */
 h1 {
-    font-size: 55px;
+    font-size: 36px;
     color: #757575;
     text-align:center;
     margin-bottom:15px;
@@ -33,7 +33,7 @@ h1 {
 /* Titles of categories */
 h2 {
     /* This is called "sectioncolor" in the ConTeXt stylesheet. */
-    color: #397249;
+    color: #3e788f;
 }
 /* There is a bar just before each category */
 h2:before {
@@ -43,7 +43,7 @@ h2:before {
     width: 16%;
     height: 10px;
     /* This is called "rulecolor" in the ConTeXt stylesheet. */
-    background-color: #9CB770;
+    background-color: #89cbe6;
 }
 /* h2:hover { */
 /*     background-color: #397249; */
@@ -75,10 +75,10 @@ blockquote {
 /* Links */
 a {
     text-decoration: none;
-    color: #397249;
+    color: #3e788f;
 }
 a:hover, a:active {
-    background-color: #397249;
+    background-color: #3e788f;
     color: #FFFFFF;
     text-decoration: none;
     text-shadow: 1px 1px 1px #333;
